--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -1,10 +1,9 @@
-<nav class="navbar navbar-expand-sm my-2" id="nav">
-  <div class="container-fluid nav">
+<nav class="navbar navbar-expand-sm navbar-light bg-light my-2" id="nav">
+  <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="40" height="40">
+      <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="75" height="75">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -28,20 +27,3 @@
     </div>
   </div>
 </nav>
-
-<div class="toggle-container">
-  <fieldset class="toggle-group" id="colorScheme">
-    <label>
-      <input type="radio" name="color-scheme" id="color-scheme-light" value="0" data-sr>
-      Light
-    </label>
-    <label>
-      <input type="radio" name="color-scheme" value="auto" checked data-sr>
-      Auto
-    </label>
-    <label>
-      <input type="radio" name="color-scheme" id="color-scheme-dark" value="1" data-sr>
-      Dark
-    </label>
-  </fieldset>
-</div>
