--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,13 +2,13 @@
   <div>
 
     <div class="social">
-      <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
+      <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/" target="_blank" rel="noreferrer noopener">
         <i class="fab fa-linkedin"></i>
       </a>
       <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://www.facebook.com/david.calabrese.334/">
+      <a href="https://www.facebook.com/david.calabrese.334/" target="_blank" rel="noreferrer noopener">
         <i class="fab fa-facebook"></i>
       </a>
     </div>
