--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -1,29 +1,29 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light my-2" id="nav">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="75" height="75">
-    </a>
+  <div class="container-fluid" id="nav-container">
+    <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="50" height="50" id="dc-logo">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" id="toggler-span"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav nav-items">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="resume.html">resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">about</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">contact</a>
-        </li>
-      </ul>
+      <div class="inner-container">
+        <ul class="navbar-nav nav-items">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">about</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
