--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
   color: var(--text-color);
   position: relative;
   font-family: Helvetica, Arial, sans-serif;
+  max-width: 120rem;
 }
 
 /*-------------------- typography -------------------*/
@@ -55,7 +56,7 @@ p a:active { color: var(--mondrian-black); }
 #theme-switcher {
   position: absolute;
   width: 40px;
-  top: 1rem;
+  top: 1.25rem;
   right: 1rem;
 }
 
@@ -75,14 +76,7 @@ nav.navbar {
 
 .nav-items {
   display: flex;
-  justify-content: center;
-  display: none;
-  margin: 0 auto;
-  margin: 1em;
-  padding-right: 1.5em;
 }
-
-.nav-items.active {  display: block; }
 
 .nav-items li {
   text-align: center;
@@ -91,24 +85,37 @@ nav.navbar {
 }
 
 nav li {
-  display: inline;
-  float: left;
+  max-width: 200px;
 }
 
 nav li a {
   display: block;
   padding: 16px;
-  letter-spacing: 2px;
   text-decoration: none;
   color: var(--mondrian-blue);
-  padding: 4px;
 }
 
-nav li a:hover {
+#nav li a {
+  color: var(--mondrian-blue);
+}
+
+#nav li a:hover {
   border-bottom: var(--mondrian-red) 1px solid;
   margin-bottom: -1px;
   color: var(--mondrian-yellow);
   transition: 0.3s;
+}
+
+#dc-logo {
+  display: none;
+}
+
+#nav-container {
+  background-color: var(--card-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 40px;
 }
 
 /* .navbar-toggle is div holding hamburger icon, not icon itself */
@@ -119,8 +126,8 @@ nav li a:hover {
   margin-left: auto;
   cursor: pointer;
   color: var(--navbar-toggle);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 0px;
   display: flex;
   align-items: center;
   z-index: 100;
@@ -130,6 +137,11 @@ nav li a:hover {
 .navbar-toggle:hover {
   color: var(--mondrian-blue);
   border-radius: 0;
+}
+
+#toggler-span {
+  height: 20px;
+  width: 20px
 }
 
 .fa-bars { transition: transform .3s ease-in; }
@@ -205,7 +217,7 @@ header {
     visibility: visible;
     display: flex;
     width: 100%;
-    height: 60px;
+    /* height: 60px; */
   }
 
   .nav-items li {
@@ -224,5 +236,17 @@ header {
     width: 40px;
     top: 36px;
     right: 2em;
+  }
+
+  #nav-container {
+    height: 4rem;
+  }
+
+  #dc-logo {
+    display: block;
+  }
+
+  #inner-container {
+    max-width: 40rem;
   }
 }
