--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,15 +1,15 @@
 <footer id="footer">
-  <div>
 
+  <div>
     <div class="social">
       <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/" target="_blank" rel="noreferrer noopener">
-        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-linkedin fa-lg"></i>
       </a>
       <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
-        <i class="fab fa-github"></i>
+        <i class="fab fa-github fa-lg"></i>
       </a>
       <a href="https://www.facebook.com/david.calabrese.334/" target="_blank" rel="noreferrer noopener">
-        <i class="fab fa-facebook"></i>
+        <i class="fab fa-facebook fa-lg"></i>
       </a>
     </div>
   </div>
