--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ nav li a {
 }
 
 #toggler-span {
-  height: 20px;
+  height: 30px;
   width: 20px
 }
 
@@ -202,9 +202,13 @@ header {
   margin: 0 20px;
 }
 
-.social i:hover {  color: var(--mondrian-yellow); }
+.social a i {
+  color: initial; /* Set your default color here */
+  transition: color 0.3s ease; /* Optional: Add smooth color transition */
+}
 
-.social i:active { color: var(--mondrian-red); }
+#footer .social i:hover {  color: var(--mondrian-yellow); }
+#footer .social i:active { color: var(--mondrian-red); }
 
 /*-------------------- media queries --------------------*/
 /* 640 px */
