--- a/css/resume.css
+++ b/css/resume.css
@@ -145,7 +145,7 @@ p.employer {
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 650px) {
   main.container {
     padding: 4px 0;
     margin: 0px 4px;
@@ -156,6 +156,13 @@ p.employer {
   }
   .projects li {
     list-style: none;
+  }
+  .skill-list li {
+    list-style: none;
+  }
+
+  .skills ul {
+    padding-left: 0.25em;
   }
   .social {
     margin-top: 1em;
