--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ nav li a {
 #nav li a:hover {
   border-bottom: var(--mondrian-red) 1px solid;
   margin-bottom: -1px;
-  color: var(--mondrian-yellow);
+  color: var(--mondrian-yellow) !important;
   transition: 0.3s;
 }
 
@@ -223,7 +223,6 @@ header {
     visibility: visible;
     display: flex;
     width: 100%;
-    /* height: 60px; */
   }
 
   .nav-items li {
