--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light my-2" id="nav">
+<nav class="navbar navbar-expand-sm bg-light my-2" id="nav">
   <div class="container-fluid" id="nav-container">
-    <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="50" height="50" id="dc-logo">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" id="toggler-span"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
